Added delete endpoints; admin controller; other minor changes